	  zero at 0x3fff making it error prone.
	* arch/arm/src/stm32/stm32f20xx_rcc.c and stm32f40xx_rcc.c: Added option
	  CONFIG_STM32_FLASH_PREFETCH.  FLASH prefetch will now only be enabled
	  if this option is selected.
	* confgs/ez80f910200zco/ostest:  Now used Kconfig/mconfig configuration
	  tool. Updated to build in native Windows environment.  Other ez80f910200zco
	  build scripts also updated.
	* configs/z8f64200100kit/ostest: Update to same level as ez80 configurations.
	* nuttx/configs/z8f64200100kit/scripts/setenv.bat: Add support for native
	  Windows build.
	* nuttx/arch/arm/src/lpc17xx/lpc17_i2c.c: Resources not being released when
	  I2C is uninitialized.
	* cloudctrl/src/up_chipid.c and shenzhou/src/up_chipid.c:  Add functions to
	  get chip ID.  Contributed by Darcy Gong.  These should not be board-dependent,
	  but should be in arch/arm/src/stm32 where they can be used from any board.
	* sched/work_thread.c: Fix backward conditional compilation.  This might
	  has caused a memory leadk.  From Freddie Chopin.
	* configs/<many>/Make.defs:  Fix typo -wstrict-prototypes should be
	  -Wstrict-prototypes (From Denis Cariki).
	* arch/arm/src/calapyso/calypso_keypad.c:  Add Calypso keypad driver.  From
	  Denis Cariki.
	* z8encore000zco/ostest and z8f64200100kit/ostest:  Converted to use Kconfig/
	  mconf configuration tool.
	* arch/arm/src/armv7-m/up_exception.S: missing curly braces for push/pop
	  From Freddie Chopin.
	* z8encore000zco/ostest and z8f64200100kit/ostest:  Can now be modified to
	  support the Windows native builds (see corresponding README.txt files).
	* configs/z16f2800100zcog - All configurations updated to use the ZDS-II
	  5.0.1 toolchain.
	* configs/z16f2800100zcog - All configurations updated to use Kconfig/mconf
	  configuration tools.
	* configs/z16f2800100zcog/ostest - Now supports a native Windows build
	  (other ZNEO configs may also support the native build, but this has not
	  been verfiied).